# github-artifact-sync

./: Cargo.toml  LICENSE-MIT  README.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml
package/archlinux/: .SRCINFO  .gitignore  PKGBUILD
package/systemd/: github-artifact-sync.conf  github-artifact-sync.service
src/: main.rs
