[package]
name = "github-artifact-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.99"
hex = "0.4.3"
hmac = "0.12.1"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
