[package]
name = "github-artifact-sync"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lima-uam/github-artifact-sync"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.99"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.28"
pathdiff = "0.2.3"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
zip = "5.1.1"
